CKA/k8s-udemy/scheduling/yamls/taint-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: gpu-pod 
spec:
  containers:
  - image: nginx
    name: gpu-pod
    resources:
      requests:
        memory: "64Mi"
        cpu: "256m"
      limits:
        memory: "128Mi"
        cpu: "512m"
  tolerations:
  - key: "gpu"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
